--- a/code/Blazora/Components/Component_Line_Pickaxe.razor
+++ b/code/Blazora/Components/Component_Line_Pickaxe.razor
@@ -29,7 +29,7 @@
 <!-- Pickaxe -->
 
 @{ 
-    Resource_Stack stack_tool = this.bgenerator.get_stack_tool ();
+    Resource_Stack stack_tool = get_stack_tool ();
 }
 
 
