--- a/code/Blazora/Components/BGenerator_Component.razor
+++ b/code/Blazora/Components/BGenerator_Component.razor
@@ -25,19 +25,56 @@
         }
     }
 
-    public BGenerator bgenerator
-    {
-        get
-        {
-            return Factorio.dico_generator_plus_bgenerator[generator];
-        } 
-    }
-
     public int s
     {
         get
         {
             return Program.cell_size;
         }
+    }
+
+
+
+    public int get_stock_val (string resource_name)
+    {
+        return Game_Engine.self.manager_resource.from_resource_name_get_resource_quantity (resource_name);
+    }
+
+    public int get_loc_val (string resource_name)
+    {
+        return this.generator.manager_resource.from_resource_name_get_resource_stack (resource_name).quantity;
+    }
+
+    public int get_loc_min (string resource_name)
+    {
+        int component_quantity = this.recipe.mix_component.from_resource_name_get_resource_stack (resource_name).quantity;
+        return component_quantity * get_tool_val ();
+    }
+
+    public int get_tool_val ()
+    {
+        return get_stack_tool ().quantity;
+    }
+
+    public int get_pack_val (string resource_name)
+    {
+        return Resource.dico_resource_name_plus_stack_resource_quantity_max[resource_name];
+    }
+
+    public Resource_Stack get_stack_tool ()
+    {
+        return this.generator.get_stack_tool ();
+    }
+
+    public string get_result_resource_name ()
+    {
+        return this.recipe.mix_result.list_resource_stack[0].resource_name;
+    }
+
+    public int get_result_val ()
+    {
+        string result_resource_name = get_result_resource_name ();
+        int result_quantity = this.recipe.mix_result.from_resource_name_get_resource_stack (result_resource_name).quantity;
+        return result_quantity * get_tool_val ();
     }
 }
