--- a/code/Blazora/Components/Chest.razor
+++ b/code/Blazora/Components/Chest.razor
@@ -1,4 +1,4 @@
-﻿@inherits Game_Component
+﻿@inherits BGenerator_Component
 @using BlazorApp.Shared.Models
 @using NS_Game_Engine
 @using NS_Manager_Resource
@@ -7,7 +7,6 @@
 
     [Parameter] public int cell_size { get; set; }
     [Parameter] public int val { get; set; }
-    [Parameter] public string item_id { get; set; }
     [Parameter] public string resource_name { get; set; }
 
     private Cellicon[] arr_cellicon { get; set; } = new Cellicon[Resource.chest_size];
@@ -69,6 +68,12 @@
 @code {
 
 
+    public override void listener_setup ()
+    {
+        base.listener_setup ();
+        listener_add (() => get_stock_val (this.resource_name));
+        listener_add (() => get_pack_val (this.resource_name));
+    }
 
 
     public override void graphical_update ()
