--- a/code/Blazora/Components/Chest.razor
+++ b/code/Blazora/Components/Chest.razor
@@ -72,7 +72,7 @@
     {
         base.listener_setup ();
         listener_add (() => get_stock_val (this.resource_name));
-        listener_add (() => get_pack_val (this.resource_name));
+        listener_add (() => get_pack_max (this.resource_name));
     }
 
 
