--- a/code/Blazora/Components/Component_Line_Stock.razor
+++ b/code/Blazora/Components/Component_Line_Stock.razor
@@ -33,6 +33,8 @@
                                  1);
                          })
                 text_bottom_right=@($"{get_loc_val (resource_name)}/{get_loc_min (resource_name)}")
+                stack_func_current=@(() => get_loc_val (resource_name))
+                stack_func_max=@(() => get_pack_max (resource_name))
                 />
 
 }
