--- a/code/Blazora/Components/BGenerator.razor
+++ b/code/Blazora/Components/BGenerator.razor
@@ -31,13 +31,17 @@
         Resource_Stack stack_tool = get_stack_tool ();
     }
 
-    @if (stack_tool.resource_name != "pickaxe")
+    @if (stack_tool.resource_name == "pickaxe")
     {
-        <Component_Line_Machine />
+        <Component_Line_Pickaxe />
+    }
+    else if (stack_tool.resource_name == "hand")
+    {
+        <Component_Line_Hand />
     }
     else
     {
-        <Component_Line_Pickaxe />
+        <Component_Line_Machine />
     }
 
 
@@ -56,15 +60,17 @@
     }
 
     <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (result_resource_name))
-            position=@(new Position (s*7, s*(start_line+0), s, s))
-            action=@(() => 
-                     {
-                         Console.WriteLine ("chest_upgrade");
-                         action_upgrade ();
-                     })
-            action_authorize=action_upgrade_is_ready
-            text_top_right=@((stack_resource_quantity_max*2).ToString ())
-            text_bottom_right=@(stack_resource_quantity_max.ToString ())
+              position=@(new Position (s*7, s*(start_line+0), s, s))
+              action=@(() => 
+                       {
+                           Console.WriteLine ("chest_upgrade");
+                           action_upgrade ();
+                       })
+              action_authorize=action_upgrade_is_ready
+              text_top_right=@((stack_resource_quantity_max*2).ToString ())
+              text_bottom_right=@($"Lv{stack_resource_quantity_max}")
+              stack_func_current=@(() => get_stock_val (result_resource_name))
+              stack_func_max=@(() => get_stock_max (result_resource_name))
             />
 
     <!-- Line 3 -->
@@ -92,10 +98,13 @@
         int quarter = s / 4;
     }
 
-    <LoadingBar 
-                position=@(new Position (s*1, s*(start_line+2)+quarter, s*6, s-quarter*2))
-                val_func="@get_job_time_percentage" 
-                val_max="100"
+    <ProgressBar 
+                 position=@(new Position (s*1, s*(start_line+2)+quarter, s*6, s-quarter*2))
+                 val_func="@get_job_time_percentage" 
+                 val_max="100"
+                 border=@(true)
+                 background_color="lightgrey"
+                 fill_color="forestgreen"
                 />
 
 
@@ -179,10 +188,8 @@
             Game_Engine.self.manager_resource.from_resource_mix_add_resource (mix_result);
         };
 
-
         Job job = Game_Engine.self.manager_job.from_action_and_time_total_add_job (action, this.recipe.time);
         job.id = get_job_id ();
-
     }
 
 
@@ -246,6 +253,7 @@
     {
         base.listener_setup ();
         listener_add (() => get_stack_tool ().quantity);
+        listener_add (() => craft_is_ready ().ToString ());
     }
 
 
