--- a/code/Blazora/Components/BGenerator_Component.razor
+++ b/code/Blazora/Components/BGenerator_Component.razor
@@ -33,7 +33,10 @@
         }
     }
 
-
+    public int get_stock_max (string resource_name)
+    {
+        return Game_Engine.self.manager_resource.from_resource_name_get_stock_resource_quantity_max (resource_name);
+    }
 
     public int get_stock_val (string resource_name)
     {
@@ -56,9 +59,9 @@
         return get_stack_tool ().quantity;
     }
 
-    public int get_pack_val (string resource_name)
+    public int get_pack_max (string resource_name)
     {
-        return Resource.dico_resource_name_plus_stack_resource_quantity_max[resource_name];
+        return Resource.from_resource_name_get_stack_resource_quantity_max (resource_name);
     }
 
     public Resource_Stack get_stack_tool ()
