--- a/code/Blazora/Components/Component_Line_Hand.razor
+++ b/code/Blazora/Components/Component_Line_Hand.razor
@@ -3,3 +3,16 @@
 @using NS_Manager_Resource
 @using NS_Game_Engine
 
+
+
+<Component_Line_Stock />
+
+@{ 
+    Resource_Stack stack_tool = get_stack_tool ();
+}
+
+
+<!-- Line 1 -->
+<Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (stack_tool.resource_name))
+            position=@(new Position (s*4, s*0, s, s))
+            />
