--- a/code/Blazora/wwwroot/css/blazora.css
+++ b/code/Blazora/wwwroot/css/blazora.css
@@ -1,5 +1,18 @@
 ﻿
 
+.noselect *::selection
+{
+    color: none;
+    background: none;
+}
+
+.noselect *::-moz-selection
+{
+    color: none;
+    background: none;
+}
+
+
 
 .layer
 {
