--- a/code/Blazora/Components/Component_Line_Stock.razor
+++ b/code/Blazora/Components/Component_Line_Stock.razor
@@ -21,6 +21,10 @@
                 text_bottom_right=@(get_stock_val (resource_name).ToString ())
                 />
 
+    
+    //int max_indicator = Math.Max (get_stack_max (resource_name), get_loc_min (resource_name));
+   
+
     <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (component_stack.resource_name))
                 position=@(new Position (s * 3, s * i, s, s))
                 action=@(() =>
@@ -32,9 +36,10 @@
                                  component_stack.resource_name,
                                  1);
                          })
+                action_authorize=@(() => action_ready (resource_name))
                 text_bottom_right=@($"{get_loc_val (resource_name)}/{get_loc_min (resource_name)}")
                 stack_func_current=@(() => get_loc_val (resource_name))
-                stack_func_max=@(() => get_pack_max (resource_name))
+                stack_func_max=@(() => get_stack_max (resource_name))
                 />
 
 }
@@ -47,7 +52,23 @@
 }
 
 
-@code{        
+@code{
+
+    public bool action_ready (string resource_name)
+    {
+        if (get_stock_val (resource_name) == 0)
+        {
+            return false;
+        }
+
+        if (get_loc_val (resource_name) == get_stack_max (resource_name) &&
+            get_stack_max (resource_name) < get_loc_min (resource_name))
+        {
+            return false;
+        }
+
+        return true;
+    }
 
     public override void listener_setup ()
     {
