--- a/code/Blazora/Shared/NavMenu.razor
+++ b/code/Blazora/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="test">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Test
+            </NavLink>
+        </li>
     </ul>
 </div>
 
