--- a/code/Blazora/Components/BGenerator.razor
+++ b/code/Blazora/Components/BGenerator.razor
@@ -230,6 +230,7 @@
         listener_add (() => get_stack_tool ().quantity);
         listener_add (() => craft_is_ready ().ToString ());
         listener_add (() => get_stock_val (get_result_resource_name ()));
+        listener_add (() => get_stack_max (get_result_resource_name ()));
     }
 
 
